# ordered-set

./: .flake8  .gitignore  .pre-commit-config.yaml.unused  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  tox.toml
docs/dev/: README.md
ordered_set/: __init__.py  _common.py
requirements/: requirements-coverage-report.txt
tests/: __init__.py  conftest.py  test_binary_ops_immut.py  test_binary_ops_mut.py  test_comparisons.py  test_constructor.py  test_container_immut.py  test_container_mut.py  test_copy.py  test_ordered_set.py  test_pickle.py
tests/helpers/: __init__.py  _general.py  ordered_set_.py  pickle_.py  test_general.py
